force-app/main/default/objects/Case/fields/Training_field__c.field-meta.xml
<CustomField>
    <fullName>Training_field__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Training field</label>
    <type>Checkbox</type>
</CustomField>