force-app/main/default/objects/Case/fields/Trimming_fix__c.field-meta.xml
<CustomField>
    <fullName>Trimming_fix__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Trimming fix</label>
    <type>Checkbox</type>
</CustomField>