force-app/main/default/objects/Case/fields/Tuesday_commit_2__c.field-meta.xml
<CustomField>
    <fullName>Tuesday_commit_2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tuesday commit 2</label>
    <type>Checkbox</type>
</CustomField>