force-app/main/default/objects/Case/fields/Tuesday_commit__c.field-meta.xml
<CustomField>
    <fullName>Tuesday_commit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tuesday commit</label>
    <type>Checkbox</type>
</CustomField>