force-app/main/default/objects/Case/fields/Umit_test__c.field-meta.xml
<CustomField>
    <fullName>Umit_test__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Umit test</label>
    <type>Checkbox</type>
</CustomField>