force-app/main/default/objects/Case/fields/Update_deployment_flow__c.field-meta.xml
<CustomField>
    <fullName>Update_deployment_flow__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Update deployment flow</label>
    <type>Checkbox</type>
</CustomField>