force-app/main/default/objects/Case/fields/US_CI_Track__c.field-meta.xml
<CustomField>
    <fullName>US_CI_Track__c</fullName>
    <defaultValue>false</defaultValue>
    <label>US CI Track</label>
    <type>Checkbox</type>
</CustomField>