force-app/main/default/objects/Case/fields/V9_test_flow__c.field-meta.xml
<CustomField>
    <fullName>V9_test_flow__c</fullName>
    <defaultValue>false</defaultValue>
    <label>V9 test flow</label>
    <type>Checkbox</type>
</CustomField>