force-app/main/default/objects/Case/fields/V_Test_field__c.field-meta.xml
<CustomField>
    <fullName>V_Test_field__c</fullName>
    <defaultValue>false</defaultValue>
    <label>V-Test field</label>
    <type>Checkbox</type>
</CustomField>