force-app/main/default/objects/Case/fields/validatecommit__c.field-meta.xml
<CustomField>
    <fullName>validatecommit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>validatecommit</label>
    <type>Checkbox</type>
</CustomField>