force-app/main/default/objects/Case/fields/Version_8_1__c.field-meta.xml
<CustomField>
    <fullName>Version_8_1__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Version 8.1</label>
    <type>Checkbox</type>
</CustomField>