force-app/main/default/objects/Case/fields/Version__c.field-meta.xml
<CustomField>
    <fullName>Version__c</fullName>
    <label>Version</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1.0.0</fullName>
            </value>
            <value>
                <fullName>1.0.1</fullName>
            </value>
            <value>
                <fullName>2.0.0</fullName>
            </value>
            <value>
                <fullName>2.0.1</fullName>
            </value>
            <value>
                <fullName>2.1.0</fullName>
            </value>
            <value>
                <fullName>2.1.1</fullName>
            </value>
            <value>
                <fullName>2.1.2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>