force-app/main/default/objects/Case/fields/vijay_fls_ps__c.field-meta.xml
<CustomField>
    <fullName>vijay_fls_ps__c</fullName>
    <defaultValue>false</defaultValue>
    <label>vijay-fls-ps</label>
    <type>Checkbox</type>
</CustomField>