force-app/main/default/objects/Case/fields/VS_PS_Test__c.field-meta.xml
<CustomField>
    <fullName>VS_PS_Test__c</fullName>
    <defaultValue>false</defaultValue>
    <label>VS PS Test</label>
    <type>Checkbox</type>
</CustomField>