force-app/main/default/objects/Case/fields/Zip_file_test__c.field-meta.xml
<CustomField>
    <fullName>Zip_file_test__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Zip file test</label>
    <type>Checkbox</type>
</CustomField>