force-app/main/default/objects/Case/recordTypes/Record_Type_2.recordType-meta.xml
<RecordType>
    <fullName>Record_Type_2</fullName>
    <active>true</active>
    <businessProcess>Support Process</businessProcess>
    <label>Record Type 2</label>
</RecordType>