force-app/main/default/objects/Case/recordTypes/V_Test_RT.recordType-meta.xml
<RecordType>
    <fullName>V_Test_RT</fullName>
    <active>true</active>
    <businessProcess>Support Process</businessProcess>
    <label>V-Test RT</label>
</RecordType>