force-app/main/default/objects/Case/listViews/NA_Research_Case.listView-meta.xml
<ListView>
    <fullName>NA_Research_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>NA - Research</label>
    <queue>NA_Research</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>