force-app/main/default/objects/Case/listViews/Snapshot_test_list_view.listView-meta.xml
<ListView>
    <fullName>Snapshot_test_list_view</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <label>Snapshot test list view</label>
</ListView>