force-app/main/default/objects/Case/listViews/YYY_list_view.listView-meta.xml
<ListView>
    <fullName>YYY_list_view</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>YYY list view</label>
    <language>en_US</language>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>